tests/c_headers/net_if.h


struct net_if_addr {
	struct net_addr address;
#if defined(CONFIG_NET_NATIVE_IPV6)
	struct net_timeout lifetime;
#endif
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	sys_snode_t dad_node;
	uint32_t dad_start;
#endif
	enum net_addr_type addr_type;
	enum net_addr_state addr_state;
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	uint8_t dad_count;
#endif
	uint8_t is_infinite : 1;
	uint8_t is_used : 1;
	uint8_t is_mesh_local : 1;
	uint8_t _unused : 5;
};
struct net_if_router {
	sys_snode_t node;
	struct net_addr address;
	struct net_if *iface;
	uint32_t life_start;
	uint16_t lifetime;
	uint8_t is_used : 1;
	uint8_t is_default : 1;
	uint8_t is_infinite : 1;
	uint8_t _unused : 5;
};
enum net_if_flag {
	NET_IF_UP,
	NET_IF_POINTOPOINT,
	NET_IF_PROMISC,
	NET_IF_NO_AUTO_START,
	NET_IF_SUSPENDED,
	NET_IF_FORWARD_MULTICASTS,
	NET_IF_IPV4,
	NET_IF_IPV6,
	NET_IF_NUM_FLAGS
};
struct net_offload;
struct net_if_dhcpv4 {
	sys_snode_t node;
	int64_t timer_start;
	uint32_t request_time;
	uint32_t xid;
	uint32_t lease_time;
	uint32_t renewal_time;
	uint32_t rebinding_time;
	struct in_addr server_id;
	struct in_addr requested_ip;
	enum net_dhcpv4_state state;
	uint8_t attempts;
};
struct net_if_ipv4_autoconf {
	sys_snode_t node;
	struct net_if *iface;
	int64_t timer_start;
	uint32_t timer_timeout;
	struct in_addr current_ip;
	struct in_addr requested_ip;
	enum net_ipv4_autoconf_state state;
	uint8_t probe_cnt;
	uint8_t announce_cnt;
	uint8_t conflict_cnt;
};
struct net_if_ip {
#if defined(CONFIG_NET_NATIVE_IPV6)
	struct net_if_ipv6 *ipv6;
#endif 
#if defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4 *ipv4;
#endif 
};
struct net_if_config {
	struct net_if_ip ip;
#if defined(CONFIG_NET_DHCPV4) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_dhcpv4 dhcpv4;
#endif 
#if defined(CONFIG_NET_IPV4_AUTO) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4_autoconf ipv4auto;
#endif 
#if defined(CONFIG_NET_L2_VIRTUAL)
	sys_slist_t virtual_interfaces;
#endif 
};
struct net_if_dev {
	const struct device *dev;
	const struct net_l2 * const l2;
	void *l2_data;
	struct net_linkaddr link_addr;
#if defined(CONFIG_NET_OFFLOAD)
	struct net_offload *offload;
#endif 
	uint16_t mtu;
#if defined(CONFIG_NET_SOCKETS_OFFLOAD)
	bool offloaded;
#endif 
};
struct net_if {
	struct net_if_dev *if_dev;
#if defined(CONFIG_NET_STATISTICS_PER_INTERFACE)
	struct net_stats stats;
#endif 
	struct net_if_config config;
#if defined(CONFIG_NET_POWER_MANAGEMENT)
	int tx_pending;
#endif
};
static inline void net_if_flag_set(struct net_if *iface,
				   enum net_if_flag value)
{
	NET_ASSERT(iface);
	atomic_set_bit(iface->if_dev->flags, value);
}
static inline bool net_if_flag_test_and_set(struct net_if *iface,
					    enum net_if_flag value)
{
	NET_ASSERT(iface);
	return atomic_test_and_set_bit(iface->if_dev->flags, value);
}
static inline void net_if_flag_clear(struct net_if *iface,
				     enum net_if_flag value)
{
	NET_ASSERT(iface);
	atomic_clear_bit(iface->if_dev->flags, value);
}
static inline bool net_if_flag_is_set(struct net_if *iface,
				      enum net_if_flag value)
{
	if (iface == NULL) {
		return false;
	}
	return atomic_test_bit(iface->if_dev->flags, value);
}
enum net_verdict net_if_send_data(struct net_if *iface, struct net_pkt *pkt);
static inline const struct net_l2 * const net_if_l2(struct net_if *iface)
{
	if (!iface || !iface->if_dev) {
		return NULL;
	}
	return iface->if_dev->l2;
}
enum net_verdict net_if_recv_data(struct net_if *iface, struct net_pkt *pkt);
static inline void *net_if_l2_data(struct net_if *iface)
{
	return iface->if_dev->l2_data;
}
static inline const struct device *net_if_get_device(struct net_if *iface)
{
	return iface->if_dev->dev;
}
void net_if_queue_tx(struct net_if *iface, struct net_pkt *pkt);
static inline bool net_if_is_ip_offloaded(struct net_if *iface)
{
#if defined(CONFIG_NET_OFFLOAD)
	return (iface->if_dev->offload != NULL);
#else
	ARG_UNUSED(iface);
	return false;
#endif
}
static inline struct net_offload *net_if_offload(struct net_if *iface)
{
#if defined(CONFIG_NET_OFFLOAD)
	return iface->if_dev->offload;
#else
	ARG_UNUSED(iface);
	return NULL;
#endif
}
static inline bool net_if_is_socket_offloaded(struct net_if *iface)
{
#if defined(CONFIG_NET_SOCKETS_OFFLOAD)
	return iface->if_dev->offloaded;
#else
	ARG_UNUSED(iface);
	return false;
#endif
}
static inline struct net_linkaddr *net_if_get_link_addr(struct net_if *iface)
{
	return &iface->if_dev->link_addr;
}
static inline struct net_if_config *net_if_get_config(struct net_if *iface)
{
	return &iface->config;
}
void net_if_start_dad(struct net_if *iface);
static inline void net_if_start_dad(struct net_if *iface)
{
	ARG_UNUSED(iface);
}
void net_if_start_rs(struct net_if *iface);
void net_if_stop_rs(struct net_if *iface);
static inline void net_if_stop_rs(struct net_if *iface)
{
	ARG_UNUSED(iface);
}
static inline int net_if_set_link_addr_unlocked(struct net_if *iface,
						uint8_t *addr, uint8_t len,
						enum net_link_type type)
{
	if (net_if_flag_is_set(iface, NET_IF_UP)) {
		return -EPERM;
	}
	net_if_get_link_addr(iface)->addr = addr;
	net_if_get_link_addr(iface)->len = len;
	net_if_get_link_addr(iface)->type = type;
	net_hostname_set_postfix(addr, len);
	return 0;
}
int net_if_set_link_addr_locked(struct net_if *iface,
				uint8_t *addr, uint8_t len,
				enum net_link_type type);
static inline int net_if_set_link_addr(struct net_if *iface,
				       uint8_t *addr, uint8_t len,
				       enum net_link_type type)
{
#if defined(CONFIG_NET_RAW_MODE)
	return net_if_set_link_addr_unlocked(iface, addr, len, type);
#else
	return net_if_set_link_addr_locked(iface, addr, len, type);
#endif
}
static inline uint16_t net_if_get_mtu(struct net_if *iface)
{
	if (iface == NULL) {
		return 0U;
	}
	return iface->if_dev->mtu;
}
static inline void net_if_set_mtu(struct net_if *iface,
				  uint16_t mtu)
{
	if (iface == NULL) {
		return;
	}
	iface->if_dev->mtu = mtu;
}
static inline void net_if_addr_set_lf(struct net_if_addr *ifaddr,
				      bool is_infinite)
{
	ifaddr->is_infinite = is_infinite;
}
struct net_if *net_if_get_by_link_addr(struct net_linkaddr *ll_addr);
struct net_if *net_if_lookup_by_dev(const struct device *dev);
static inline struct net_if_config *net_if_config_get(struct net_if *iface)
{
	return &iface->config;
}
void net_if_router_rm(struct net_if_router *router);
struct net_if *net_if_get_default(void);
struct net_if *net_if_get_first_by_type(const struct net_l2 *l2);
static inline struct net_if *net_if_get_ieee802154(void)
{
	return net_if_get_first_by_type(&NET_L2_GET_NAME(IEEE802154));
}
typedef void (*net_if_link_callback_t)(struct net_if *iface,
				       struct net_linkaddr *dst,
				       int status);
struct net_if_link_cb {
	sys_snode_t node;
	net_if_link_callback_t cb;
};