src/zephyr_c/net/znet_if.nim


  net_if_link_callback_t* = proc (iface: ptr net_if; dst: ptr net_linkaddr; status: cint) ##\
    ##  @typedef net_if_link_callback_t
    ##  @brief Define callback that is called after a network packet
    ##         has been sent.
    ##  @param iface A pointer to a struct net_if to which the the net_pkt was sent to.
    ##  @param dst Link layer address of the destination where the network packet was sent.
    ##  @param status Send status, 0 is ok, < 0 error.
    ##

  net_if_link_cb* {.importc: "net_if_link_cb", header: hdr, bycopy.} = object
    ##  @brief Link callback handler struct.
    ##
    ##  Stores the link callback information. Caller must make sure that
    ##  the variable pointed by this is valid during the lifetime of
    ##  registration. Typically this means that the variable cannot be
    ##  allocated from stack.
    ##
    node* {.importc: "node".}: sys_snode_t ## * Node information for the slist.
    cb* {.importc: "cb".}: net_if_link_callback_t ## * Link callback

when CONFIG_NET_DHCPV4 and CONFIG_NET_NATIVE_IPV4:
  type
    net_if_dhcpv4* {.importc: "net_if_dhcpv4", header: hdr, bycopy.} = object
      node* {.importc: "node".}: sys_snode_t ## * Used for timer lists
      timer_start* {.importc: "timer_start".}: int64 ## * Timer start
      request_time* {.importc: "request_time".}: uint32 ## * Time for INIT, DISCOVER, REQUESTING, RENEWAL
      xid* {.importc: "xid".}: uint32 
      lease_time* {.importc: "lease_time".}: uint32 ## * IP address Lease time
      renewal_time* {.importc: "renewal_time".}: uint32 ## * IP address Renewal time
      rebinding_time* {.importc: "rebinding_time".}: uint32 ## * IP address Rebinding time
      server_id* {.importc: "server_id".}: InAddr ## * Server ID
      requested_ip* {.importc: "requested_ip".}: InAddr ## * Requested IP addr
      state* {.importc: "state".}: net_dhcpv4_state ##   DHCPv4 client state in the process of network address allocation.
      attempts* {.importc: "attempts".}: uint8 ## * Number of attempts made for REQUEST and RENEWAL messages

when CONFIG_NET_IPV4_AUTO and CONFIG_NET_NATIVE_IPV4:
  type
    net_if_ipv4_autoconf* {.importc: "net_if_ipv4_autoconf", header: hdr,
                           bycopy.} = object
      node* {.importc: "node".}: sys_snode_t ## * Used for timer lists
      iface* {.importc: "iface".}: ptr net_if_alias ## * Backpointer to correct network interface
      timer_start* {.importc: "timer_start".}: int64 ## * Timer start
      timer_timeout* {.importc: "timer_timeout".}: uint32 ## * Time for INIT, DISCOVER, REQUESTING, RENEWAL
      current_ip* {.importc: "current_ip".}: InAddr ## * Current IP addr
      requested_ip* {.importc: "requested_ip".}: InAddr ## * Requested IP addr
      state* {.importc: "state".}: net_ipv4_autoconf_state ## * IPV4 Autoconf state in the process of network address allocation.
      probe_cnt* {.importc: "probe_cnt".}: uint8 ## * Number of sent probe requests
      announce_cnt* {.importc: "announce_cnt".}: uint8 ## * Number of sent announcements
      conflict_cnt* {.importc: "conflict_cnt".}: uint8 ## * Incoming conflict count




## *
##  @brief Set a value in network interface flags
##
##  @param iface Pointer to network interface
##  @param value Flag value
##

proc net_if_flag_set*(iface: ptr net_if; value: net_if_flag) {.importc: "$1", header: hdr.}



## *
##  @brief Test and set a value in network interface flags
##
##  @param iface Pointer to network interface
##  @param value Flag value
##
##  @return true if the bit was set, false if it wasn't.
##

proc net_if_flag_test_and_set*(iface: ptr net_if; value: net_if_flag): bool {.importc: "$1", header: hdr.}



## *
##  @brief Clear a value in network interface flags
##
##  @param iface Pointer to network interface
##  @param value Flag value
##

proc net_if_flag_clear*(iface: ptr net_if; value: net_if_flag) {.importc: "$1", header: hdr.}



## *
##  @brief Check if a value in network interface flags is set
##
##  @param iface Pointer to network interface
##  @param value Flag value
##
##  @return True if the value is set, false otherwise
##

proc net_if_flag_is_set*(iface: ptr net_if; value: net_if_flag): bool {.importc: "$1", header: hdr.}



## *
##  @brief Send a packet through a net iface
##
##  @param iface Pointer to a network interface structure
##  @param pkt Pointer to a net packet to send
##
##  return verdict about the packet
##

proc net_if_send_data*(iface: ptr net_if; pkt: ptr net_pkt_alias): net_verdict {.
    importc: "net_if_send_data", header: hdr.}



## *
##  @brief Get a pointer to the interface L2
##
##  @param iface a valid pointer to a network interface structure
##
##  @return a pointer to the iface L2
##

proc net_if_l2*(iface: ptr net_if): ptr net_l2 {.importc: "$1", header: hdr.}



## *
##  @brief Input a packet through a net iface
##
##  @param iface Pointer to a network interface structure
##  @param pkt Pointer to a net packet to input
##
##  @return verdict about the packet
##

proc net_if_recv_data*(iface: ptr net_if; pkt: ptr net_pkt_alias): net_verdict {.
    importc: "net_if_recv_data", header: hdr.}



## *
##  @brief Get a pointer to the interface L2 private data
##
##  @param iface a valid pointer to a network interface structure
##
##  @return a pointer to the iface L2 data
##

proc net_if_l2_data*(iface: ptr net_if): pointer {.importc: "$1", header: hdr.}



## *
##  @brief Get an network interface's device
##
##  @param iface Pointer to a network interface structure
##
##  @return a pointer to the device driver instance
##

proc net_if_get_device*(iface: ptr net_if): ptr device {.importc: "$1", header: hdr.}



## *
##  @brief Queue a packet to the net interface TX queue
##
##  @param iface Pointer to a network interface structure
##  @param pkt Pointer to a net packet to queue
##

proc net_if_queue_tx*(iface: ptr net_if; pkt: ptr net_pkt_alias) {.
    importc: "net_if_queue_tx", header: hdr.}



## *
##  @brief Return the IP offload status
##
##  @param iface Network interface
##
##  @return True if IP offlining is active, false otherwise.
##

proc net_if_is_ip_offloaded*(iface: ptr net_if): bool {.importc: "$1", header: hdr.}



## *
##  @brief Return the IP offload plugin
##
##  @param iface Network interface
##
##  @return NULL if there is no offload plugin defined, valid pointer otherwise
##

proc net_if_offload*(iface: ptr net_if): ptr net_offload_alias {.importc: "$1", header: hdr.}



## *
##  @brief Return the socket offload status
##
##  @param iface Network interface
##
##  @return True if socket offloading is active, false otherwise.
##

proc net_if_is_socket_offloaded*(iface: ptr net_if): bool {.importc: "$1", header: hdr.}



## *
##  @brief Get an network interface's link address
##
##  @param iface Pointer to a network interface structure
##
##  @return a pointer to the network link address
##

proc net_if_get_link_addr*(iface: ptr net_if): ptr net_linkaddr {.importc: "$1", header: hdr.}



## *
##  @brief Return network configuration for this network interface
##
##  @param iface Pointer to a network interface structure
##
##  @return Pointer to configuration
##

proc net_if_get_config*(iface: ptr net_if): ptr net_if_config {.importc: "$1", header: hdr.}



## *
##  @brief Start duplicate address detection procedure.
##
##  @param iface Pointer to a network interface structure
##

proc net_if_start_dad*(iface: ptr net_if) {.importc: "net_if_start_dad", header: hdr.}



## *
##  @brief Start neighbor discovery and send router solicitation message.
##
##  @param iface Pointer to a network interface structure
##

proc net_if_start_rs*(iface: ptr net_if) {.importc: "net_if_start_rs",
                                       header: hdr.}


## *
##  @brief Stop neighbor discovery.
##
##  @param iface Pointer to a network interface structure
##

proc net_if_stop_rs*(iface: ptr net_if) {.importc: "net_if_stop_rs", header: hdr.}



## * @cond INTERNAL_HIDDEN

proc net_if_set_link_addr_unlocked*(iface: ptr net_if; caddr: ptr uint8; len: uint8;
                                   ctype: net_link_type): cint {.importc: "$1", header: hdr.}

proc net_if_set_link_addr_locked*(iface: ptr net_if; caddr: ptr uint8; len: uint8;
                                 ctype: net_link_type): cint {.
    importc: "net_if_set_link_addr_locked", header: hdr.}


## * @endcond


## *
##  @brief Set a network interface's link address
##
##  @param iface Pointer to a network interface structure
##  @param addr A pointer to a uint8_t buffer representing the address.
##              The buffer must remain valid throughout interface lifetime.
##  @param len length of the address buffer
##  @param type network bearer type of this link address
##
##  @return 0 on success
##

proc net_if_set_link_addr*(iface: ptr net_if; caddr: ptr uint8; len: uint8;
                          ctype: net_link_type): cint {.importc: "$1", header: hdr.}



## *
##  @brief Get an network interface's MTU
##
##  @param iface Pointer to a network interface structure
##
##  @return the MTU
##

proc net_if_get_mtu*(iface: ptr net_if): uint16 {.importc: "$1", header: hdr.}



## *
##  @brief Set an network interface's MTU
##
##  @param iface Pointer to a network interface structure
##  @param mtu New MTU, note that we store only 16 bit mtu value.
##

proc net_if_set_mtu*(iface: ptr net_if; mtu: uint16) {.importc: "$1", header: hdr.}



## *
##  @brief Set the infinite status of the network interface address
##
##  @param ifaddr IP address for network interface
##  @param is_infinite Infinite status
##

proc net_if_addr_set_lf*(ifaddr: ptr net_if_addr; is_infinite: bool) {.importc: "$1", header: hdr.}



## *
##  @brief Get an interface according to link layer address.
##
##  @param ll_addr Link layer address.
##
##  @return Network interface or NULL if not found.
##

proc net_if_get_by_link_addr*(ll_addr: ptr net_linkaddr): ptr net_if {.
    importc: "net_if_get_by_link_addr", header: hdr.}



## *
##  @brief Find an interface from it's related device
##
##  @param dev A valid struct device pointer to relate with an interface
##
##  @return a valid struct net_if pointer on success, NULL otherwise
##

proc net_if_lookup_by_dev*(dev: ptr device): ptr net_if {.
    importc: "net_if_lookup_by_dev", header: hdr.}



## *
##  @brief Get network interface IP config
##
##  @param iface Interface to use.
##
##  @return NULL if not found or pointer to correct config settings.
##

proc net_if_config_get*(iface: ptr net_if): ptr net_if_config {.importc: "$1", header: hdr.}



## *
##  @brief Remove a router from the system
##
##  @param router Pointer to existing router
##

proc net_if_router_rm*(router: ptr net_if_router) {.importc: "net_if_router_rm",
    header: hdr.}



## *
##  @brief Get the default network interface.
##
##  @return Default interface or NULL if no interfaces are configured.
##

proc net_if_get_default*(): ptr net_if {.importc: "net_if_get_default",
                                     header: hdr.}



## *
##  @brief Get the first network interface according to its type.
##
##  @param l2 Layer 2 type of the network interface.
##
##  @return First network interface of a given type or NULL if no such
##  interfaces was found.
##

proc net_if_get_first_by_type*(l2: ptr net_l2): ptr net_if {.
    importc: "net_if_get_first_by_type", header: hdr.}

when CONFIG_NET_L2_IEEE802154:
  ##  @brief Get the first IEEE 802.15.4 network interface.
  ##
  ##  @return First IEEE 802.15.4 network interface or NULL if no such
  ##  interfaces was found.
  ##
  proc net_if_get_ieee802154*(): ptr net_if {.importc: "$1", header: hdr.}



## *
##  @brief Allocate network interface IPv6 config.
##
##  @details This function will allocate new IPv6 config.
##
##  @param iface Interface to use.
##  @param ipv6 Pointer to allocated IPv6 struct is returned to caller.
##
##  @return 0 if ok, <0 if error
##
